<resources>
    <string name="app_name">BLE Beacon</string>
    <string name="ble_uuid" xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">B8CE3F1D-D741-482A-B466-CE3F46B5B1C8</string>
    <string name="service_channel_name">BLE Beacon Service Channel</string>
    <string name="service_channel_id">bleBeaconServiceChannel</string>
    <string name="ble_advertising_service_title">BLE Advertising Beacon</string>
    <string name="unique_code">uniqueCode</string>
    <string name="advertising_started">BLE Advertising has started</string>
    <string name="advertising_stopped">BLE Advertising has stopped</string>
    <string name="advertisement_not_supported">Multiple advertisement not supported</string>
    <string name="start_advertising">Start Advertising</string>
    <string name="stop_advertising">Stop Advertising</string>
    <string name="unique_code_hint">Unique Code</string>
    <string name="ble_not_supported">BLE is not supported on this device</string>
    <string name="waiting_for_bluetooth_enable">Attempting to enable the bluetooth adapter</string>
    <string name="beacon_type">BeaconType</string>
    <string name="beacon_type_label">Beacon Type:</string>
    <string name="ble_1m_phy">BLE 1M PHY</string>
    <string name="alt_beacon_google">AltBeacon (Google)</string>
    <string name="i_beacon_apple">iBeacon (Apple)</string>
    <string name="ble_advertising_ble_1m_phy_text">Advertising as BLE 1M PHY</string>
    <string name="ble_advertising_alt_beacon_text_format"><b>Advertising as AltBeacon \n</b><b>Unique Code = %x</b></string>
    <string name="ble_advertising_i_beacon_text">Advertising as iBeacon</string>
    <string name="required_permissions_not_granted">This app does not have the required permissions for BLE advertising</string>
    <string name="unique_code_string">uniqueCode</string>
    <string name="checked_beacon_type_id">beaconType</string>
    <string name="from_application">From Application</string>
</resources>